-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 2.6.0-rc
-
None
-
Qt5 (probably also Qt 4)
-
Icf365781544255e322259262ea6a19a0b1dc7a25
The icons that are e.g. used for the breadcrumbs, previous/next arrows and external links are not shown when browsing offline manuals in creator.
This is due to a bug that was believed to be a WebKit bug, but is in fact a problem with the implementation of QtCreator's custom network access manager / reply classes for loading resources from the offline help into the help webview, namely the incorrect setup of base urls.
For Gerrit Dashboard: QTCREATORBUG-8211 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82250,2 | Assistant: Set the url on created QNetworkReply objects. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |