Correct the setup of HelpNetworkReply.

Resources addressed as urls in offline css files were not loaded
(e.g. breadcrumb icons) due to the base url not being setup and
therefore defaulting to the main page, when it should have been
set to the url of the corresponding style sheet to make relative
urls work correctly.

This also eliminates the need for the workaround introduced earlier.

Task-number: QTCREATORBUG-8211

Change-Id: Icf365781544255e322259262ea6a19a0b1dc7a25
modified:   src/plugins/help/helpviewer_qwv.cpp
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>